@@ -137,7 +137,10 @@ export(
 
   , dgamma.R
   , dpois_raw
-  , bd0, bd0C, stirlerr
+  , dpois_simpl
+  , dpois_Simpl # << "experimental" respectively purely didactical
+  , bd0, bd0C
+  , stirlerr, stirlerr_simpl
   , bd0_p1l1d1, bd0_p1l1d, bd0_l1pm
   , ebd0, ebd0C
   , p1l1, p1l1., p1l1p, p1l1ser ## NB: p1l1p() via log1pmx()  is *very* good!
